mobile scrollbar fix

--- a/style.css
+++ b/style.css
@@ -134,6 +134,7 @@ html {
   height: 100%;
 }
 body {
+  overflow: auto;
   /* width: 100%;
   height: 100%; */
   /* margin-top: 20%;
